# azpos

./: CLAUDE.md  Cargo.toml  LICENSE.md  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
Plans/: 00-OVERVIEW.md  01-test-harness.md  02-syscall-hardening.md  03-memory.md  04-process-lifecycle.md  05-vfs.md  06-devices.md  07-spawn-and-pipes.md  08-stage1-userspace.md  09-ipc.md  10-registry.md  11-users.md  12-threads-and-fork.md  99-roadmap.md
kernel/: Cargo.toml  build.rs
kernel/src/: logger.rs  main.rs  panic.rs
kernel/src/devices/: fb.rs  keyboard.rs  manager.rs  mod.rs  pic.rs  serial.rs
kernel/src/devices/fb/: mod.rs  terminal.rs
kernel/src/devices/keyboard/: mod.rs  scancode.rs
kernel/src/devices/pci/: config.rs  mod.rs
kernel/src/devices/pci/device/: class.rs  mod.rs
kernel/src/devices/storage/: mbr.rs  mod.rs
kernel/src/devices/storage/ahci/: ata.rs  bar.rs  device.rs  error.rs  fis.rs  mmio.rs  mod.rs  types.rs
kernel/src/devices/storage/ata/: bus.rs  commands.rs  mod.rs  ports.rs
kernel/src/filesystem/: mod.rs  path.rs
kernel/src/filesystem/fat/: boot_record.rs  directories.rs  fat.rs  mod.rs
kernel/src/interrupts/: handlers.rs  mod.rs  wrappers.s
kernel/src/memory/: heap.rs  mmio.rs  mod.rs  paging.rs  stacks.rs  user.rs
kernel/src/processes/: elfdefs.rs  mod.rs  process.rs
kernel/src/processes/syscalls/: entrypoint.s  handlers.rs  mod.rs
kernel/src/processes/syscalls/resources/: blob.rs  logger.rs  mod.rs
kernel/src/scheduling/: mod.rs
kernel/src/scheduling/threads/: mod.rs  mutex.rs  state.rs  thread.rs
kernel/src/scheduling/threads/sync/: condvar.rs  int_mutex.rs  mod.rs  mutex.rs  queue.rs
kernel/src/terminal/: font.psf  global.rs  mod.rs
kernel/src/utils/: id_table.rs  mod.rs
libraries/libsci/: Cargo.toml
libraries/libsci/src/: lib.rs
libraries/libsci/src/devices/: mod.rs
libraries/libsci/src/resources/: mod.rs
libraries/libsyscall/: Cargo.toml
libraries/libsyscall/src/: lib.rs  syscall.rs
libraries/libsystem/: Cargo.toml
libraries/libsystem/src/: lib.rs  runtime.rs
libraries/libsystem/src/syscalls/: make_syscall.s  mod.rs  resource.rs
programs/adam/: Cargo.toml
programs/adam/src/: main.rs
src/: main.rs
