[package]
name = "azpos"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bootloader = "0.11.10"
mbrman = "0.6"
gpt = "4"
fatfs = "0.3"
fscommon  = "0.1"
azpos-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
adam = { path = "programs/adam", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = [
    "kernel", 

    "libraries/libsci", 
    "libraries/libsystem", 

    "programs/adam"
]

