cargo-features = ["per-package-target"]

[package]
name = "azpos-kernel"
version = "0.1.0"
edition = "2024"
forced-target = "x86_64-unknown-none"

[dependencies]
libsci = { path = "../libraries/libsci" }

bootloader_api = "0.11.10"
x86_64 = "0.15.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
simple-pcf = "0.1.1"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
bitvec = { version = "1.0.1", features = ["alloc"], default-features = false }
modular-bitfield = "0.12.0"
elf = { version = "0.8.0", features = ["alloc", "to_str"], default-features = false } 
