[package]
name = "libsci"
description = "System Call Interface Library. Holds common definitions and structures shared by the kernel and processes vis-a-vis the SCI."
version = "0.1.0"
edition = "2024"

[dependencies]
postcard = { version = "1.1.1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
